fix bug : margin bottom session on iPhone

--- a/front/src/session.css
+++ b/front/src/session.css
@@ -198,6 +198,7 @@ ul .answer {
         padding-left: 10%;
         padding-right: 10%;
         text-align: center;
+        margin-bottom: 80px;
     }
     .quizButton{
         height:9vh;
